@@ -25,17 +25,16 @@ import net.skinsrestorer.shared.plugin.SRPlugin;
 import net.skinsrestorer.shared.update.UpdateDownloader;
 import net.skinsrestorer.shared.utils.SRHelpers;
 import org.bukkit.Server;
+import org.jetbrains.annotations.Nullable;
 
 import javax.inject.Inject;
 import javax.net.ssl.HttpsURLConnection;
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Base64;
 
 /**
  * Parts taken from <a href="https://github.com/InventivetalentDev/SpigetUpdater">SpigetUpdater</a>
@@ -47,13 +46,13 @@ public class UpdateDownloaderGithub implements UpdateDownloader {
     private final Server server;
     private final PluginJarProvider jarProvider;
 
-    private void download(String downloadUrl, Path targetFile) throws UpdateException {
+    private void download(String downloadUrl, Path targetFile, @Nullable String expectedHash) throws UpdateException {
         try {
             // We don't use HttpClient because this writes to a file directly
-            HttpsURLConnection connection = (HttpsURLConnection) new URL(downloadUrl).openConnection();
+            HttpsURLConnection connection = (HttpsURLConnection) URI.create(downloadUrl).toURL().openConnection();
             connection.setRequestProperty("User-Agent", plugin.getUserAgent());
             if (connection.getResponseCode() != 200) {
-                throw new UpdateException("Download returned status code " + connection.getResponseCode());
+                throw new UpdateException("Download returned status code %d".formatted(connection.getResponseCode()));
             }
 
             byte[] fileData;
@@ -62,21 +61,13 @@ public class UpdateDownloaderGithub implements UpdateDownloader {
                     throw new IOException("Failed to open input stream");
                 }
 
-                ByteArrayOutputStream byteData = new ByteArrayOutputStream();
-                byte[] buffer = new byte[4096];
-                int read;
-                while ((read = is.read(buffer)) != -1) {
-                    byteData.write(buffer, 0, read);
-                }
-
-                fileData = byteData.toByteArray();
-                String hash = connection.getHeaderField("content-md5");
-                if (hash != null && !Arrays.equals(Base64.getDecoder().decode(hash), SRHelpers.md5(fileData))) {
-                    throw new UpdateException("Downloaded file is corrupted");
-                } else if (hash == null) {
-                    logger.warning("[GitHubUpdate] MD5 header not found, cannot verify integrity");
+                fileData = is.readAllBytes();
+                if (expectedHash != null && !expectedHash.equals(SRHelpers.hashSha256ToHex(fileData))) {
+                    throw new UpdateException("Downloaded file is corrupted. SHA256 hash does not match.");
+                } else if (expectedHash == null) {
+                    logger.warning("[GitHubUpdate] SHA256 hash not found, cannot verify integrity");
                 } else {
-                    logger.debug("[GitHubUpdate] MD5 hash successfully verified");
+                    logger.debug("[GitHubUpdate] SHA256 hash successfully verified");
                 }
             }
 
@@ -86,26 +77,42 @@ public class UpdateDownloaderGithub implements UpdateDownloader {
         }
     }
 
+    private String readStringFromUrl(String url) throws UpdateException {
+        try {
+            HttpsURLConnection connection = (HttpsURLConnection) URI.create(url).toURL().openConnection();
+            connection.setRequestProperty("User-Agent", plugin.getUserAgent());
+            if (connection.getResponseCode() != 200) {
+                throw new UpdateException("Download returned status code %d".formatted(connection.getResponseCode()));
+            }
+
+            try (InputStream is = connection.getInputStream()) {
+                if (is == null) {
+                    throw new IOException("Failed to open input stream");
+                }
+
+                return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+            }
+        } catch (IOException e) {
+            throw new UpdateException("Download failed", e);
+        }
+    }
+
     @Override
-    public boolean downloadUpdate(String downloadUrl) {
+    public boolean downloadUpdate(String downloadUrl, @Nullable String verificationAssetUrl) {
         Path pluginFile = jarProvider.get(); // /plugins/XXX.jar
         Path updateFolder = server.getUpdateFolderFile().toPath();
-        try {
-            Files.createDirectories(updateFolder);
-        } catch (IOException e) {
-            logger.warning("[GitHubUpdate] Could not create update folder", e);
-            return false;
-        }
+        SRHelpers.createDirectoriesSafe(updateFolder);
 
         Path updateFile = updateFolder.resolve(pluginFile.getFileName()); // /plugins/update/XXX.jar
 
         logger.info("[GitHubUpdate] Downloading update...");
         try {
             long start = System.currentTimeMillis();
-            download(downloadUrl, updateFile);
+            String expectedHash = verificationAssetUrl == null ? null : readStringFromUrl(verificationAssetUrl).lines().findFirst().orElse(null);
+            download(downloadUrl, updateFile, expectedHash);
 
-            logger.info(String.format("[GitHubUpdate] Downloaded update in %dms", System.currentTimeMillis() - start));
-            logger.info(String.format("[GitHubUpdate] Update saved as %s", updateFile.getFileName()));
+            logger.info("[GitHubUpdate] Downloaded update in %dms".formatted(System.currentTimeMillis() - start));
+            logger.info("[GitHubUpdate] Update saved as %s".formatted(updateFile.getFileName()));
             logger.info("[GitHubUpdate] The update will be loaded on the next server restart");
         } catch (UpdateException e) {
             logger.warning("[GitHubUpdate] Could not download update", e);
