@@ -24,19 +24,24 @@ import net.skinsrestorer.api.property.MojangSkinDataResult;
 import net.skinsrestorer.api.property.SkinIdentifier;
 import net.skinsrestorer.api.property.SkinProperty;
 import net.skinsrestorer.api.storage.PlayerStorage;
+import net.skinsrestorer.shared.config.CommandConfig;
 import net.skinsrestorer.shared.config.LoginConfig;
 import net.skinsrestorer.shared.config.StorageConfig;
 import net.skinsrestorer.shared.floodgate.FloodgateUtil;
 import net.skinsrestorer.shared.log.SRLogger;
 import net.skinsrestorer.shared.storage.adapter.AdapterReference;
 import net.skinsrestorer.shared.storage.adapter.StorageAdapter;
+import net.skinsrestorer.shared.storage.model.player.FavouriteData;
+import net.skinsrestorer.shared.storage.model.player.HistoryData;
 import net.skinsrestorer.shared.storage.model.player.PlayerData;
 import net.skinsrestorer.shared.utils.SRHelpers;
 
 import javax.inject.Inject;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 @RequiredArgsConstructor(onConstructor_ = @Inject)
 public class PlayerStorageImpl implements PlayerStorage {
@@ -55,7 +60,7 @@ public class PlayerStorageImpl implements PlayerStorage {
                 return Optional.ofNullable(playerData.getSkinIdentifier());
             }
         } catch (StorageAdapter.StorageException e) {
-            logger.severe("Failed to get skin data of player " + uuid, e);
+            logger.severe("Failed to get skin data of player %s".formatted(uuid), e);
         }
 
         return Optional.empty();
@@ -71,10 +76,170 @@ public class PlayerStorageImpl implements PlayerStorage {
                 playerData.setSkinIdentifier(identifier);
                 adapterReference.get().setPlayerData(uuid, playerData);
             } else {
-                adapterReference.get().setPlayerData(uuid, PlayerData.of(uuid, identifier));
+                adapterReference.get().setPlayerData(uuid, PlayerData.of(uuid, identifier, List.of(), List.of()));
             }
         } catch (StorageAdapter.StorageException e) {
-            logger.severe("Failed to set skin data of player " + uuid, e);
+            logger.severe("Failed to set skin data of player %s".formatted(uuid), e);
+        }
+    }
+
+    public Optional<HistoryData> getTopOfHistory(UUID uuid, int skip) {
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                return playerData.getHistory().stream()
+                        .sorted(Comparator.comparing(HistoryData::getTimestamp).reversed())
+                        .skip(skip)
+                        .findFirst();
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to get skin data of player %s".formatted(uuid), e);
+        }
+
+        return Optional.empty();
+    }
+
+    public int getHistoryCount(UUID uuid) {
+        return getHistoryEntries(uuid, 0, Integer.MAX_VALUE).size();
+    }
+
+    public List<HistoryData> getHistoryEntries(UUID uuid, int skip, int limit) {
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                return playerData.getHistory().stream()
+                        .sorted(Comparator.comparing(HistoryData::getTimestamp).reversed())
+                        .skip(skip)
+                        .limit(limit)
+                        .toList();
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to get skin data of player %s".formatted(uuid), e);
+        }
+
+        return List.of();
+    }
+
+    public void pushToHistory(UUID uuid, HistoryData historyData) {
+        int maxHistoryLength = settings.getProperty(CommandConfig.MAX_HISTORY_LENGTH);
+        if (maxHistoryLength <= 0) {
+            return;
+        }
+
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+            boolean topIsSame = getTopOfHistory(uuid, 0).map(data -> data.getSkinIdentifier().equals(historyData.getSkinIdentifier())).orElse(false);
+            if (topIsSame) {
+                // don't push the same skin to the top of the history
+                return;
+            }
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                playerData.setHistory(Stream.concat(playerData.getHistory().stream(), Stream.of(historyData))
+                        .sorted(Comparator.comparing(HistoryData::getTimestamp))
+                        .skip(Math.max(0, playerData.getHistory().size() + 1 - maxHistoryLength))
+                        .toList());
+
+                adapterReference.get().setPlayerData(uuid, playerData);
+            } else {
+                adapterReference.get().setPlayerData(uuid, PlayerData.of(uuid, null, List.of(historyData), List.of()));
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to push skin data of player %s".formatted(uuid), e);
+        }
+    }
+
+    public void removeFromHistory(UUID uuid, HistoryData historyData) {
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                playerData.setHistory(playerData.getHistory().stream().filter(data -> !data.equals(historyData)).toList());
+
+                adapterReference.get().setPlayerData(uuid, playerData);
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to remove skin data of player %s".formatted(uuid), e);
+        }
+    }
+
+    public Optional<FavouriteData> getFavouriteData(UUID uuid, SkinIdentifier skinIdentifier) {
+        return getFavouriteEntries(uuid, 0, Integer.MAX_VALUE).stream()
+                .filter(data -> data.getSkinIdentifier().equals(skinIdentifier))
+                .findFirst();
+    }
+
+    public int getFavouriteCount(UUID uuid) {
+        return getFavouriteEntries(uuid, 0, Integer.MAX_VALUE).size();
+    }
+
+    public List<FavouriteData> getFavouriteEntries(UUID uuid, int skip, int limit) {
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                return playerData.getFavourites().stream()
+                        .sorted(Comparator.comparing(FavouriteData::getTimestamp).reversed())
+                        .skip(skip)
+                        .limit(limit)
+                        .toList();
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to get skin data of player %s".formatted(uuid), e);
+        }
+
+        return List.of();
+    }
+
+    public void addFavourite(UUID uuid, FavouriteData favouriteData) {
+        int maxFavourites = settings.getProperty(CommandConfig.MAX_FAVOURITE_LENGTH);
+        if (maxFavourites <= 0) {
+            return;
+        }
+
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                boolean alreadyIsFavourite = playerData.getFavourites().stream().anyMatch(data -> data.getSkinIdentifier().equals(favouriteData.getSkinIdentifier()));
+                if (alreadyIsFavourite) {
+                    // don't add the same skin to the favourites
+                    return;
+                }
+
+                playerData.setFavourites(Stream.concat(playerData.getFavourites().stream(), Stream.of(favouriteData))
+                        .sorted(Comparator.comparing(FavouriteData::getTimestamp))
+                        .skip(Math.max(0, playerData.getHistory().size() + 1 - maxFavourites))
+                        .toList());
+
+                adapterReference.get().setPlayerData(uuid, playerData);
+            } else {
+                adapterReference.get().setPlayerData(uuid, PlayerData.of(uuid, null, List.of(), List.of(favouriteData)));
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to push skin data of player %s".formatted(uuid), e);
+        }
+    }
+
+    public void removeFavourite(UUID uuid, SkinIdentifier skinIdentifier) {
+        try {
+            Optional<PlayerData> optional = adapterReference.get().getPlayerData(uuid);
+
+            if (optional.isPresent()) {
+                PlayerData playerData = optional.get();
+                playerData.setFavourites(playerData.getFavourites().stream().filter(data -> !data.getSkinIdentifier().equals(skinIdentifier)).toList());
+
+                adapterReference.get().setPlayerData(uuid, playerData);
+            }
+        } catch (StorageAdapter.StorageException e) {
+            logger.severe("Failed to remove skin data of player %s".formatted(uuid), e);
         }
     }
 
@@ -89,7 +254,7 @@ public class PlayerStorageImpl implements PlayerStorage {
                 adapterReference.get().setPlayerData(uuid, playerData);
             }
         } catch (StorageAdapter.StorageException e) {
-            logger.severe("Failed to remove skin data of player " + uuid, e);
+            logger.severe("Failed to remove skin data of player %s".formatted(uuid), e);
         }
     }
 
@@ -120,7 +285,7 @@ public class PlayerStorageImpl implements PlayerStorage {
         }
 
         if (FloodgateUtil.isFloodgateBedrockPlayer(uuid)) {
-            logger.debug("Player " + playerName + " is a Floodgate player, not searching for java skin.");
+            logger.debug("Player %s is a Floodgate player, not searching for java skin.".formatted(playerName));
             return Optional.empty();
         }
 
@@ -155,7 +320,7 @@ public class PlayerStorageImpl implements PlayerStorage {
             return Optional.empty();
         }
 
-        String selectedSkin = skins.size() == 1 ? skins.get(0) : SRHelpers.getRandomEntry(skins);
+        String selectedSkin = skins.size() == 1 ? skins.getFirst() : SRHelpers.getRandomEntry(skins);
 
         return skinStorage.findSkinData(selectedSkin).map(result -> new SkinForResult(result.getIdentifier(), result.getProperty()));
     }
